--- a/vignettes/logisticRegression.Rmd
+++ b/vignettes/logisticRegression.Rmd
@@ -62,8 +62,17 @@ stepsizesOptimization = 1e-1
 Alternatively, we can simply use the shortcut `stepsizesMCMC = 2e-5` which would set the stepsizes for each parameter to `2e-5`. The optimization step is performed using the `TensorFlow` `AdamOptimizer`.
 
 Now we can run our SGLD-CV algorithm using the function `sgldcv` from the `sgmcmc` package, which returns a list of Markov chains for each parameter as output. Use the argument `verbose = FALSE` to hide the output of the function. As the dataset size is quite large, we'll change the `minibatchSize` from its default `0.01 * N` to `500`. To allow a small 1000 iteration burn-in we'll set the number of iterations to be 11000
-```{r message=FALSE}
+```{r eval=FALSE}
 output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, minibatchSize = 500, nIters = 11000 ) 
+```
+
+```{r echo=FALSE}
+tryCatch({
+    output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, minibatchSize = 500, nIters = 11000 ) 
+}, error = function (e) { 
+    writeLines("Not all tensorflow dependencies are met so skipping this...")
+    writeLines("Try running tensorflow::install_tensorflow().")
+})
 ```
 
 To check the algorithm converged, we'll plot the average log-predictive density of the data from our test set every 10 iterations. Let $$\hat \pi_i^{(j)} := \frac{1}{1 + \exp\left[-\beta_0^{(j)} - \mathbf x_i \beta^{(j)}\right]},$$
@@ -71,7 +80,7 @@ here $\hat \pi_i^{(j)}$ denotes the probability that the $j^{\text{th}}$ iterati
 $$A := \frac{1}{|T|} \sum_{y_i \in T} \left[ y_i \log \hat \pi_i^{(j)} + (1 - y_i) \log(1 - \hat \pi_i^{(j)}) \right]$$
 
 To check convergence, we'll plot the average log-predictive density every 10 iterations as follows
-```{r}
+```{r eval=FALSE}
 yTest = testSet[,1]
 XTest = testSet[,2:ncol(testSet)]
 # Remove burn-in
@@ -98,4 +107,39 @@ plotFrame = data.frame("iteration" = iterations, "logPredictive" = avLogPred)
 ggplot(plotFrame, aes(x = iteration, y = logPredictive)) +
     geom_line() +
     ylab("Average log predictive of test set")
+```
+
+```{r echo=FALSE}
+tryCatch({
+    a = tf$constant(c(1, 1))
+    yTest = testSet[,1]
+    XTest = testSet[,2:ncol(testSet)]
+    # Remove burn-in
+    output$bias = output$bias[-c(1:1000)]
+    output$beta = output$beta[-c(1:1000),,]
+    iterations = seq(from = 1, to = 10^4, by = 10)
+    avLogPred = rep(0, length(iterations))
+    # Calculate log predictive every 10 iterations
+    for ( iter in 1:length(iterations) ) {
+        j = iterations[iter]
+        # Get parameters at iteration j
+        beta0_j = output$bias[j]
+        beta_j = output$beta[j,]
+        for ( i in 1:length(yTest) ) {
+            pihat_ij = 1 / (1 + exp(- beta0_j - sum(XTest[i,] * beta_j)))
+            y_i = yTest[i]
+            # Calculate log predictive at current test set point
+            LogPred_curr = - (y_i * log(pihat_ij) + (1 - y_i) * log(1 - pihat_ij))
+            avLogPred[iter] = avLogPred[iter] + 1 / length(yTest) * LogPred_curr
+        }
+    }
+    library(ggplot2)
+    plotFrame = data.frame("iteration" = iterations, "logPredictive" = avLogPred)
+    ggplot(plotFrame, aes(x = iteration, y = logPredictive)) +
+        geom_line() +
+        ylab("Average log predictive of test set")
+}, error = function (e) { 
+    writeLines("Not all tensorflow dependencies are met so skipping this...")
+    writeLines("Try running tensorflow::install_tensorflow().")
+})
 ```
