Added vignette index

--- a/vignettes/sgmcmc.Rmd
+++ b/vignettes/sgmcmc.Rmd
@@ -3,7 +3,7 @@ title: "sgmcmc: Getting Started"
 author: "Jack Baker"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Getting Started}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
