--- a/vignettes/logisticRegression.Rmd
+++ b/vignettes/logisticRegression.Rmd
@@ -22,6 +22,7 @@ covertype = getDataset("covertype")
 
 First we'll remove about 10000 observations from the original dataset to form a test set, this will be used to check the validity of the algorithm. Then we'll separate out the response variable `y` and the explanatory variables `X`. The response variable is the first column in the dataset.
 ```{r}
+set.seed(13)
 testObservations = sample(nrow(covertype), 10^4)
 testSet = covertype[testObservations,]
 X = covertype[-c(testObservations),2:ncol(covertype)]
@@ -56,30 +57,32 @@ logPrior = function(params) {
 
 Finally, we'll set the stepsize parameters for the algorithm, along with the minibatch size. `sgldcv` relies on two stepsize parameters, one for the optimization step and one for the MCMC step. To allow stepsizes to be set for different parameters, the form of the stepsizes for the MCMC will be lists with names corresponding to each of the names in `params`. The optimization step will just be one value as the stepsize is automatically tuned
 ```{r}
-stepsizesMCMC = list("beta" = 2e-5, "bias" = 2e-5)
-stepsizesOptimization = 1e-1
+stepsizesMCMC = list("beta" = 5e-6, "bias" = 5e-6)
+stepsizesOptimization = 5e-6
 ```
 Alternatively, we can simply use the shortcut `stepsizesMCMC = 2e-5` which would set the stepsizes for each parameter to `2e-5`. The optimization step is performed using the `TensorFlow` `AdamOptimizer`.
 
-Now we can run our SGLD-CV algorithm using the function `sgldcv` from the `sgmcmc` package, which returns a list of Markov chains for each parameter as output. Use the argument `verbose = FALSE` to hide the output of the function. As the dataset size is quite large, we'll change the `minibatchSize` from its default `0.01 * N` to `500`. To allow a small 1000 iteration burn-in we'll set the number of iterations to be 11000
-```{r eval=FALSE}
-output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, minibatchSize = 500, nIters = 11000 ) 
+Now we can run our SGLD-CV algorithm using the function `sgldcv` from the `sgmcmc` package, which returns a list of Markov chains for each parameter as output. Use the argument `verbose = FALSE` to hide the output of the function. To make the results reproducible we'll set the seed to 13. As the dataset size is quite large, we'll change the `minibatchSize` from its default `0.01 * N` to `500`. To allow a small 1000 iteration burn-in we'll set the number of iterations to be 11000
+```{r, eval = FALSE}
+output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, 
+        minibatchSize = 500, nIters = 11000, verbose = FALSE, seed = 13 ) 
 ```
 
 ```{r echo=FALSE}
 tryCatch({
-    output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, minibatchSize = 500, nIters = 11000 ) 
+output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, 
+        minibatchSize = 500, nIters = 11000, verbose = FALSE, seed = 13 ) 
 }, error = function (e) { 
     writeLines("Not all tensorflow dependencies are met so skipping this...")
     writeLines("Try running tensorflow::install_tensorflow().")
 })
 ```
 
-To check the algorithm converged, we'll plot the average log-predictive density of the data from our test set every 10 iterations. Let $$\hat \pi_i^{(j)} := \frac{1}{1 + \exp\left[-\beta_0^{(j)} - \mathbf x_i \beta^{(j)}\right]},$$
-here $\hat \pi_i^{(j)}$ denotes the probability that the $j^{\text{th}}$ iteration of our MCMC chain assigned to observation $i$ is in our test set. Define our test set by $T$, the average log-predictive density is given by
+A common performance measure for a classifier is the [log loss](https://www.kaggle.com/wiki/LogLoss). To check the algorithm converged, we'll plot the log loss of the data from our test set every 10 iterations. Let $$\hat \pi_i^{(j)} := \frac{1}{1 + \exp\left[-\beta_0^{(j)} - \mathbf x_i \beta^{(j)}\right]},$$
+here $\hat \pi_i^{(j)}$ denotes the probability that the $j^{\text{th}}$ iteration of our MCMC chain assigned to observation $i$ is in our test set. Define our test set by $T$, the log loss is given by
 $$A := \frac{1}{|T|} \sum_{y_i \in T} \left[ y_i \log \hat \pi_i^{(j)} + (1 - y_i) \log(1 - \hat \pi_i^{(j)}) \right]$$
 
-To check convergence, we'll plot the average log-predictive density every 10 iterations as follows
+To check convergence, we'll plot the log loss every 10 iterations as follows
 ```{r eval=FALSE}
 yTest = testSet[,1]
 XTest = testSet[,2:ncol(testSet)]
@@ -87,8 +90,8 @@ XTest = testSet[,2:ncol(testSet)]
 output$bias = output$bias[-c(1:1000)]
 output$beta = output$beta[-c(1:1000),,]
 iterations = seq(from = 1, to = 10^4, by = 10)
-avLogPred = rep(0, length(iterations))
-# Calculate log predictive every 10 iterations
+logLoss = rep(0, length(iterations))
+# Calculate log loss every 10 iterations
 for ( iter in 1:length(iterations) ) {
     j = iterations[iter]
     # Get parameters at iteration j
@@ -97,16 +100,16 @@ for ( iter in 1:length(iterations) ) {
     for ( i in 1:length(yTest) ) {
         pihat_ij = 1 / (1 + exp(- beta0_j - sum(XTest[i,] * beta_j)))
         y_i = yTest[i]
-        # Calculate log predictive at current test set point
+        # Calculate log loss at current test set point
         LogPred_curr = - (y_i * log(pihat_ij) + (1 - y_i) * log(1 - pihat_ij))
-        avLogPred[iter] = avLogPred[iter] + 1 / length(yTest) * LogPred_curr
+        logLoss[iter] = logLoss[iter] + 1 / length(yTest) * LogPred_curr
     }
 }
 library(ggplot2)
-plotFrame = data.frame("iteration" = iterations, "logPredictive" = avLogPred)
-ggplot(plotFrame, aes(x = iteration, y = logPredictive)) +
+plotFrame = data.frame("iteration" = iterations, "logLoss" = logLoss)
+ggplot(plotFrame, aes(x = iteration, y = logLoss)) +
     geom_line() +
-    ylab("Average log predictive of test set")
+    ylab("Log loss of test set")
 ```
 
 ```{r echo=FALSE}
@@ -118,8 +121,8 @@ tryCatch({
     output$bias = output$bias[-c(1:1000)]
     output$beta = output$beta[-c(1:1000),,]
     iterations = seq(from = 1, to = 10^4, by = 10)
-    avLogPred = rep(0, length(iterations))
-    # Calculate log predictive every 10 iterations
+    logLoss = rep(0, length(iterations))
+    # Calculate log loss every 10 iterations
     for ( iter in 1:length(iterations) ) {
         j = iterations[iter]
         # Get parameters at iteration j
@@ -128,16 +131,16 @@ tryCatch({
         for ( i in 1:length(yTest) ) {
             pihat_ij = 1 / (1 + exp(- beta0_j - sum(XTest[i,] * beta_j)))
             y_i = yTest[i]
-            # Calculate log predictive at current test set point
+            # Calculate log loss at current test set point
             LogPred_curr = - (y_i * log(pihat_ij) + (1 - y_i) * log(1 - pihat_ij))
-            avLogPred[iter] = avLogPred[iter] + 1 / length(yTest) * LogPred_curr
+            logLoss[iter] = logLoss[iter] + 1 / length(yTest) * LogPred_curr
         }
     }
     library(ggplot2)
-    plotFrame = data.frame("iteration" = iterations, "logPredictive" = avLogPred)
-    ggplot(plotFrame, aes(x = iteration, y = logPredictive)) +
+    plotFrame = data.frame("iteration" = iterations, "logLoss" = logLoss)
+    ggplot(plotFrame, aes(x = iteration, y = logLoss)) +
         geom_line() +
-        ylab("Average log predictive of test set")
+        ylab("Log loss of test set")
 }, error = function (e) { 
     writeLines("Not all tensorflow dependencies are met so skipping this...")
     writeLines("Try running tensorflow::install_tensorflow().")
