--- a/vignettes/mvGauss.Rmd
+++ b/vignettes/mvGauss.Rmd
@@ -8,7 +8,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-In this example we use the package to infer the mean of a 2d Gaussian using [stochastic gradient Langevin dynamics](http://machinelearning.wustl.edu/mlpapers/paper_files/ICML2011Welling_398.pdf). So we assume we have independent and identically distributed data $x_1, \dots, x_N$ with $X_i | \theta \sim N( \theta, I_2 )$, and we want to infer $\theta$.
+In this example we use the package to infer the mean of a 2d Gaussian using [stochastic gradient Langevin dynamics](https://www.ics.uci.edu/~welling/publications/papers/stoclangevin_v6.pdf). So we assume we have independent and identically distributed data $x_1, \dots, x_N$ with $X_i | \theta \sim N( \theta, I_2 )$, and we want to infer $\theta$.
 
 First, let's simulate the data with the following code, we set $N$ to be $10^4$
 ```{r message=FALSE}
