Simplified distributions access

--- a/vignettes/nn.Rmd
+++ b/vignettes/nn.Rmd
@@ -53,7 +53,7 @@ params$lambdaa = rgamma(1, 1)
 params$lambdab = rgamma(1, 1)
 ```
 
-Now let's declare the `logLik` and `logPrior` functions
+Now let's declare the `logLik` and `logPrior` functions. Remember that for ease of use, all distribution functions located in `tf$contrib$distributions` have been copied to `tf$distributions` as well (for more details see the [Get Started](https://stor-i.github.io/sgmcmc///articles/sgmcmc.html) page).
 ```{r}
 logLik = function(params, dataset) {
     # Calculate estimated probabilities
@@ -65,14 +65,14 @@ logLik = function(params, dataset) {
 }
 
 logPrior = function(params) {
-    distLambda = tf$contrib$distributions$Gamma(1, 1)
-    distA = tf$contrib$distributions$Normal(0, tf$rsqrt(params$lambdaA))
+    distLambda = tf$distributions$Gamma(1, 1)
+    distA = tf$distributions$Normal(0, tf$rsqrt(params$lambdaA))
     logPriorA = tf$reduce_sum(distA$log_prob(params$A)) + distLambda$log_prob(params$lambdaA)
-    distB = tf$contrib$distributions$Normal(0, tf$rsqrt(params$lambdaB))
+    distB = tf$distributions$Normal(0, tf$rsqrt(params$lambdaB))
     logPriorB = tf$reduce_sum(distB$log_prob(params$B)) + distLambda$log_prob(params$lambdaB)
-    dista = tf$contrib$distributions$Normal(0, tf$rsqrt(params$lambdaa))
+    dista = tf$distributions$Normal(0, tf$rsqrt(params$lambdaa))
     logPriora = tf$reduce_sum(dista$log_prob(params$a)) + distLambda$log_prob(params$lambdaa)
-    distb = tf$contrib$distributions$Normal(0, tf$rsqrt(params$lambdab))
+    distb = tf$distributions$Normal(0, tf$rsqrt(params$lambdab))
     logPriorb = tf$reduce_sum(distb$log_prob(params$b)) + distLambda$log_prob(params$lambdab)
     logPrior = logPriorA + logPriorB + logPriora + logPriorb
     return(logPrior)
