--- a/vignettes/gaussMixture.Rmd
+++ b/vignettes/gaussMixture.Rmd
@@ -41,18 +41,20 @@ The parameters are declared very similarly, but this time the value associated w
 params = list( "theta1" = c( 0, 0 ), "theta2" = c( 0.1, 0.1 ) )
 ```
 
-Now we'll define the functions `logLik` and `logPrior`. It should now become clear why the list names come in handy. The function `logLik` should take two parameters as input: `params` and `dataset`. These parameters will be lists with the same names as those you defined for `params` and `dataset` earlier. There is one difference though, the objects in the lists will have automatically been converted to `TensorFlow` objects for you. The `params` list will contain `TensorFlow` tensor variables; the `dataset` list will contain `TensorFlow` placeholders. The `logLik` function should take these lists as input and return the value of the log likelihood as a tensor at point `params` given data `dataset`. The function should do this using `TensorFlow` operations, as this allows the gradient to be automatically calculated; it also allows the wide range of distribution objects as well as matrix operations that `TensorFlow` provides to be taken advantage of. A tutorial of `TensorFlow` for `R` is beyond the scope of this article, for more details we refer the reader to the website of [TensorFlow for R](https://tensorflow.rstudio.com/). With this in place we can define the log-likelihood function `logLik` as follows
+Now we'll define the functions `logLik` and `logPrior`. It should now become clear why the list names come in handy. The function `logLik` should take two parameters as input: `params` and `dataset`. These parameters will be lists with the same names as those you defined for `params` and `dataset` earlier. There is one difference though, the objects in the lists will have automatically been converted to `TensorFlow` objects for you. The `params` list will contain `TensorFlow` tensor variables; the `dataset` list will contain `TensorFlow` placeholders. The `logLik` function should take these lists as input and return the value of the log likelihood as a tensor at point `params` given data `dataset`. The function should do this using `TensorFlow` operations, as this allows the gradient to be automatically calculated; it also allows the wide range of distribution objects as well as matrix operations that `TensorFlow` provides to be taken advantage of. A tutorial of `TensorFlow` for `R` is beyond the scope of this article, for more details we refer the reader to the website of [TensorFlow for R](https://tensorflow.rstudio.com/). 
+
+Specifying the `logLik` and `logPrior` functions regularly requires specifying specific distributions. `TensorFlow` already has a number of distributions implemented, located at `tf$distributions` and `tf$contrib$distributions`. In the interest of cleanliness we have copied all the distributions in `tf$contrib$distributions` into `tf$distributions`, which gives you easier access to all the distributions implemented in TensorFlow. The module `tf$contrib$distributions` will still work as expected for compatability. With this in place we can define the log-likelihood function `logLik` as follows
 ```{r}
 logLik = function( params, dataset ) {
     # Declare Sigma (assumed known)
     SigmaDiag = c(1, 1)
     # Declare distribution of each component
-    component1 = tf$contrib$distributions$MultivariateNormalDiag( params$theta1, SigmaDiag )
-    component2 = tf$contrib$distributions$MultivariateNormalDiag( params$theta2, SigmaDiag )
+    component1 = tf$distributions$MultivariateNormalDiag( params$theta1, SigmaDiag )
+    component2 = tf$distributions$MultivariateNormalDiag( params$theta2, SigmaDiag )
     # Declare allocation probabilities of each component
-    probs = tf$contrib$distributions$Categorical(c(0.5,0.5))
+    probs = tf$distributions$Categorical(c(0.5,0.5))
     # Declare full mixture distribution given components and allocation probabilities
-    distn = tf$contrib$distributions$Mixture(probs, list(component1, component2))
+    distn = tf$distributions$Mixture(probs, list(component1, component2))
     # Declare log likelihood
     logLik = tf$reduce_sum( distn$log_prob(dataset$X) )
     return( logLik )
@@ -67,7 +69,7 @@ logPrior = function( params ) {
     mu0 = c( 0, 0 )
     Sigma0Diag = c(10, 10)
     # Declare prior distribution
-    priorDistn = tf$contrib$distributions$MultivariateNormalDiag( mu0, Sigma0Diag )
+    priorDistn = tf$distributions$MultivariateNormalDiag( mu0, Sigma0Diag )
     # Declare log prior density and return
     logPrior = priorDistn$log_prob( params$theta1 ) + priorDistn$log_prob( params$theta2 )
     return( logPrior )
