--- a/vignettes/mvGauss.Rmd
+++ b/vignettes/mvGauss.Rmd
@@ -30,12 +30,14 @@ The parameters are declared very similarly, but this time the value associated w
 params = list( "theta" = c( 0, 0 ) )
 ```
 
-Now we'll define the functions `logLik` and `logPrior`. It should now become clear why the list names come in handy. The function `logLik` should take two parameters as input: `params` and `dataset`. These parameters will be lists with the same names as those you defined for `params` and `dataset` earlier. There is one difference though, the objects in the lists will have automatically been converted to `TensorFlow` objects for you. The `params` list will contain `TensorFlow` tensor variables; the `dataset` list will contain `TensorFlow` placeholders. The `logLik` function should take these lists as input and return the value of the log-likelihood function as a tensor at point `params` given data `dataset`. The function should do this using `TensorFlow` operations, as this allows the gradient to be automatically calculated; it also allows the wide range of distribution objects as well as matrix operations that `TensorFlow` provides to be taken advantage of. A tutorial of `TensorFlow` for `R` is beyond the scope of this article, for more details we refer the reader to the website of [TensorFlow for R](https://tensorflow.rstudio.com/). With this in place we can define the `logLik` function as follows
+Now we'll define the functions `logLik` and `logPrior`. It should now become clear why the list names come in handy. The function `logLik` should take two parameters as input: `params` and `dataset`. These parameters will be lists with the same names as those you defined for `params` and `dataset` earlier. There is one difference though, the objects in the lists will have automatically been converted to `TensorFlow` objects for you. The `params` list will contain `TensorFlow` tensor variables; the `dataset` list will contain `TensorFlow` placeholders. The `logLik` function should take these lists as input and return the value of the log-likelihood function as a tensor at point `params` given data `dataset`. The function should do this using `TensorFlow` operations, as this allows the gradient to be automatically calculated; it also allows the wide range of distribution objects as well as matrix operations that `TensorFlow` provides to be taken advantage of. A tutorial of `TensorFlow` for `R` is beyond the scope of this article, for more details we refer the reader to the website of [TensorFlow for R](https://tensorflow.rstudio.com/). 
+
+Specifying the `logLik` and `logPrior` functions regularly requires specifying specific distributions. `TensorFlow` already has a number of distributions implemented, located at `tf$distributions` and `tf$contrib$distributions`. In the interest of cleanliness we have copied all the distributions in `tf$contrib$distributions` into `tf$distributions`, which gives you easier access to all the distributions implemented in TensorFlow. The module `tf$contrib$distributions` will still work as expected for compatability. With this in place we can define the `logLik` function as follows
 ```{r}
 logLik = function( params, dataset ) {
     # Declare distribution of each observation
     SigmaDiag = c( 1, 1 )
-    baseDist = tf$contrib$distributions$MultivariateNormalDiag( params$theta, SigmaDiag )
+    baseDist = tf$distributions$MultivariateNormalDiag( params$theta, SigmaDiag )
     # Declare log-likelihood function and return
     logLik = tf$reduce_sum( baseDist$log_prob( dataset$X ) )
     return( logLik )
@@ -46,7 +48,7 @@ So this function basically states that our likelihood is $\sum_{i=1}^N \log \mat
 Next we want to define our log-prior density, which we assume is $\log p( \theta_j ) = \log \mathcal N(\theta_j | 0,10)$, for each dimension $j$ of $\theta$. Similar to `logLik`, `logPrior` is defined as a function with input `params`. In our case the definition is
 ```{r}
 logPrior = function( params ) {
-    baseDist = tf$contrib$distributions$Normal( 0, 10 )
+    baseDist = tf$distributions$Normal( 0, 10 )
     logPrior = tf$reduce_sum( baseDist$log_prob( params$theta ) )
     return( logPrior )
 }
