--- a/vignettes/mvGauss.Rmd
+++ b/vignettes/mvGauss.Rmd
@@ -32,7 +32,7 @@ params = list( "theta" = c( 0, 0 ) )
 
 Now we'll define the functions `logLik` and `logPrior`. It should now become clear why the list names come in handy. The function `logLik` should take two parameters as input: `params` and `dataset`. These parameters will be lists with the same names as those you defined for `params` and `dataset` earlier. There is one difference though, the objects in the lists will have automatically been converted to `TensorFlow` objects for you. The `params` list will contain `TensorFlow` tensor variables; the `dataset` list will contain `TensorFlow` placeholders. The `logLik` function should take these lists as input and return the value of the log-likelihood function as a tensor at point `params` given data `dataset`. The function should do this using `TensorFlow` operations, as this allows the gradient to be automatically calculated; it also allows the wide range of distribution objects as well as matrix operations that `TensorFlow` provides to be taken advantage of. A tutorial of `TensorFlow` for `R` is beyond the scope of this article, for more details we refer the reader to the website of [TensorFlow for R](https://tensorflow.rstudio.com/). 
 
-Specifying the `logLik` and `logPrior` functions regularly requires specifying specific distributions. `TensorFlow` already has a number of distributions implemented, located at `tf$distributions` and `tf$contrib$distributions`. In the interest of cleanliness we have copied all the distributions in `tf$contrib$distributions` into `tf$distributions`, which gives you easier access to all the distributions implemented in TensorFlow. The module `tf$contrib$distributions` will still work as expected for compatability. With this in place we can define the `logLik` function as follows
+Specifying the `logLik` and `logPrior` functions regularly requires specifying specific distributions. `TensorFlow` already has a number of distributions implemented in the [`TensorFlow Probability`](https://www.tensorflow.org/probability/) package. All of the distributions implemented in TensorFlow Probability are located in `tf$distributions`, a list is given on the [TensorFlow Probability website](https://www.tensorflow.org/probability/api_docs/python/tfp/distributions). More complex distributions can be specified by coding up the `logLik` and `logPrior` functions by hand, examples of this, as well as using various distribution functions, are given in the other tutorials. With this in place we can define the `logLik` function as follows
 ```{r}
 logLik = function( params, dataset ) {
     # Declare distribution of each observation
