--- a/vignettes/nn.Rmd
+++ b/vignettes/nn.Rmd
@@ -105,7 +105,7 @@ Here the function `sgmcmcStep` will update `sgld$params` using a single update o
 
 Our simple example is fine, but we really would like to calculate a Monte Carlo average of the parameters on the fly. Also with these large examples, they take a long time to run, so it's useful to check how the algorithm is doing every once in a while. This is especially useful when tuning by trial and error as you can stop an algorithm early if it's doing badly. This is why we let you declare the TensorFlow session yourself: it lets you create your custom tensors to print algorithm progress, or to create your own test functions to reduce the chain dimensionality (they have to be declared before the TensorFlow session starts).
 
-Let's delete everything after we created our `sgld` object. Now we're going to demonstrate a more complicated step by step example where we print performance and calulate the Monte Carlo estimate on the fly. Suppose we have test data $X^*$, and test labels $y^*$, and at some iteration $i$ our SGMCMC algorithm outputs values for all the parameters $\theta_t$. Then the probability that our neural network model will classify a given test observation to class $k$ is given by $\beta_k(\theta_t, \mathbf x_i^*)$; i.e. the $k^{th}$ element of $\beta(\theta_t, \mathbf x_i^*)$, which was defined earlier. A common performance measure for a classifier is the [log loss](https://www.kaggle.com/wiki/LogLoss), defined by
+Let's delete everything after we created our `sgld` object. Now we're going to demonstrate a more complicated step by step example where we print performance and calulate the Monte Carlo estimate on the fly. Suppose we have test data $X^*$, and test labels $y^*$, and at some iteration $i$ our SGMCMC algorithm outputs values for all the parameters $\theta_t$. Then the probability that our neural network model will classify a given test observation to class $k$ is given by $\beta_k(\theta_t, \mathbf x_i^*)$; i.e. the $k^{th}$ element of $\beta(\theta_t, \mathbf x_i^*)$, which was defined earlier. A common performance measure for a classifier is the [log loss](https://datawookie.netlify.com/blog/2015/12/making-sense-of-logarithmic-loss/), defined by
 $$
     ll = - \frac{1}{N} \sum_{i=1}^{N_{\text{test}}} \sum_{k=1}^K y^*_{i,k} \log \beta( \theta_t, \mathbf x_i^* ).
 $$
